# DepsRAG

./: .dockerignore  .env-template  .gitignore  Dockerfile  LICENSE  README.md  cross_deps.py  docker-compose.yml  entrypoint.sh  pyproject.toml  run_depsrag_docker.sh  run_docker_compose.sh
.chainlit/: config.toml
alanysis-scripts/: answer_correctness.py  total_count.py
analysis-results/: answer_correctness.py  experiment_with_critic.json  experiment_without_critic.json  total_count.py
dependencyrag/: DependencyChatbot.ipynb  assistant_agent.py  critic_agent.py  critic_plan_task.py  cypher_message.py  dependency_agent.py  dependency_chatbot.py  depsrag_multiagent.py  depsrag_singleagent.py  iteration_analysis.py  retriever_agent.py  search_agent.py  tools.py
dependencyrag/chainlit/: chainlit_dependency_chatbot.py
