[tool.poetry]
name = "dependencyrag"
version = "0.1.1"
description = "Program Dependency Chatbot"
authors = ["Mohannadcse <mohannad.alhanahnah@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langroid = "0.16.6"
neo4j = "^5.18.0"
pyvis = "^0.3.2"
chainlit = "1.1.202"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
